Suppression de normalize.css

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 @font-face {
+  font-display: swap;
   font-family: 'Montserrat';
   src: url(montserrat.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  font-display: swap;
 }
 
 html {
+  line-height: 1.15;
   font-size: clamp(14px, 1.4vw, 21px);
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
+  margin: 0;
   color: #714302;
   background-color: #f2eee8;
 }
@@ -78,6 +81,7 @@ button:hover {
 }
 
 main {
+  display: block;
   padding: 0 1rem;
 }
 
@@ -86,6 +90,32 @@ main p {
   margin: 1rem auto;
   line-height: 1.5rem;
   text-wrap: pretty;
+}
+
+a {
+  background-color: transparent;
+}
+
+img {
+  border-style: none;
+}
+
+button {
+  margin: 0;
+  font-size: 100%;
+  font-family: inherit;
+  text-transform: none;
+  overflow: visible;
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 .separator {
