--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ body {
   background-color: #f2eee8;
 }
 
+img {
+  border-style: none;
+}
+
 header {
   height: 100vh;
   display: grid;
@@ -69,10 +73,26 @@ header .logo div:first-of-type {
 }
 
 button {
+  margin: 0;
+  font-size: 100%;
+  font-family: inherit;
+  text-transform: none;
+  line-height: 1.15;
+  overflow: visible;
+  -webkit-appearance: button;
   border: 1px solid;
   padding: 0.75rem 1.5rem;
   background-color: #f2eee8;
   color: #714302;
+}
+
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 button:hover {
@@ -94,28 +114,6 @@ main p {
 
 a {
   background-color: transparent;
-}
-
-img {
-  border-style: none;
-}
-
-button {
-  margin: 0;
-  font-size: 100%;
-  font-family: inherit;
-  text-transform: none;
-  overflow: visible;
-  -webkit-appearance: button;
-}
-
-button::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-button:-moz-focusring {
-  outline: 1px dotted ButtonText;
 }
 
 .separator {
